[FIX] web_notebook_collapse: page content color as link color

--- a/web_notebook_collapse/static/src/views/form/notebook.scss
+++ b/web_notebook_collapse/static/src/views/form/notebook.scss
@@ -25,9 +25,10 @@
 }
 
 .o_notebook_collapse_control {
-    margin-right: -8px;
     float: right;
-    margin-bottom: 1.5rem;
+    margin-right: -8px;
+    margin-top: 1.5rem;
+    margin-bottom: 0.3rem;
 
     > button.btn {
         font-size: 0.9rem;
